force-app/main/default/objects/Candidate__c/fields/Comments2__c.field-meta.xml
<CustomField>
    <fullName>Comments2__c</fullName>
    <description>comments2</description>
    <label>Comments2</label>
    <type>TextArea</type>
</CustomField>