force-app/main/default/objects/Candidate__c/fields/Discount2__c.field-meta.xml
<CustomField>
    <fullName>Discount2__c</fullName>
    <label>Discount2</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>