force-app/main/default/objects/Candidate__c/fields/MyPickList__c.field-meta.xml
<CustomField>
    <fullName>MyPickList__c</fullName>
    <label>MyPickList</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A1</fullName>
            </value>
            <value>
                <fullName>B2</fullName>
            </value>
            <value>
                <fullName>C3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>