force-app/main/default/objects/Candidate__c/fields/NewFiledChandu__c.field-meta.xml
<CustomField>
    <fullName>NewFiledChandu__c</fullName>
    <label>NewFiledChandu</label>
    <length>20</length>
    <type>Text</type>
</CustomField>