force-app/main/default/objects/Candidate__c/fields/Phone_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Phone_Mobile__c</fullName>
    <label>Phone/Mobile</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>