force-app/main/default/objects/Candidate__c/fields/price2__c.field-meta.xml
<CustomField>
    <fullName>price2__c</fullName>
    <label>price2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>