force-app/main/default/objects/Candidate__c/fields/TestMergeIssueField__c.field-meta.xml
<CustomField>
    <fullName>TestMergeIssueField__c</fullName>
    <label>TestMergeIssueField</label>
    <length>50</length>
    <type>Text</type>
</CustomField>