force-app/main/default/objects/Candidate__c/fields/Total_Price2__c.field-meta.xml
<CustomField>
    <fullName>Total_Price2__c</fullName>
    <formula>price2__c - Discount2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>