force-app/main/default/objects/Candidate__c/validationRules/test.validationRule-meta.xml
<ValidationRule>
    <fullName>test</fullName>
    <active>true</active>
    <errorConditionFormula>CONTAINS(&quot;Ram&quot;,First_Name__c)</errorConditionFormula>
    <errorMessage>Please make sure price should be greater than 0.</errorMessage>
</ValidationRule>